[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rho"
version = "0.1.0"
description = "Generate python file to access API defined by OpenApi3"
dependencies = [
    "requests",
    "pydantic",
    "argparse",
    "typer",
    "typer_shell",
]

[project.scripts]
rho-gen = "rho_clients.generator.main:main"
rho-cmd = "rho_clients.cmds.cmd_shell:main"
rho-sim = "rho_clients.app_specific.sim_run:main"
